[package]
name = "rust-procfs-monitor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.18"
log = "0.4.14"
pretty_env_logger = "0.4.0"
procfs = "0.11.1"
thiserror = "1.0.30"
tokio = { version = "1.14.0", features = ["rt", "macros", "time", "process", "sync"] }
